src/objects/Office__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMSv10_Office_Code__c</fullName>
        <externalId>true</externalId>
        <label>CMSv10 Office Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMSv10_Office_Name__c</fullName>
        <label>CMSv10 Office Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>G2</fullName>
                </value>
                <value>
                    <fullName>G3</fullName>
                </value>
                <value>
                    <fullName>G4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_RO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent RO</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipName>Responsible_Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responsible_Office_del__c</fullName>
        <label>Responsible Office</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Office</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Level__c</columns>
        <columns>Parent_RO__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Corporate_Business_Group</fullName>
        <columns>NAME</columns>
        <columns>Level__c</columns>
        <columns>Parent_RO__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Office__c.Corporate_Business_Group</value>
        </filters>
        <label>Corporate Business Group</label>
    </listViews>
    <listViews>
        <fullName>HMB_North_Area</fullName>
        <columns>NAME</columns>
        <columns>Level__c</columns>
        <columns>Parent_RO__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Office__c.HMB</value>
        </filters>
        <label>HMB - North Area</label>
    </listViews>
    <nameField>
        <label>Office</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offices</pluralLabel>
    <recordTypes>
        <fullName>Biz_Partners_Group</fullName>
        <active>true</active>
        <label>Biz Partners Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate_Business_Group</fullName>
        <active>true</active>
        <label>Corporate Business Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>HMB</fullName>
        <active>true</active>
        <label>HMB Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web</fullName>
        <active>true</active>
        <label>Web</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>